--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 <body>
     <h1>another git try</h1>
     <p>try to push cide to gihub</p>
-    <p>new code vhanged</p>
+    <p>new code changed</p>
+    <img src="dipika.jpg" alt="">
+    <img src="alia.jpg" alt="">
+    <img src="janvi.jpg" alt="">
 </body>
 
 </html>
